[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cycu11372012"
version = "0.1.0"
description = "A short description of the cycu11372012 package"
readme = "README.md"
requires-python = ">=3.7"
authors = [
    { name="Tsai Ting-Hsiang", email="orlando36947704@gmail.com" }
]
license = { text = "MIT" }
dependencies = [
    "certifi==2025.4.26",
    "geopandas==1.0.1",
    "numpy==2.2.5",
    "packaging==25.0",
    "pandas==2.2.3",
    "pyogrio==0.10.0",
    "pyproj==3.7.1",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "shapely==2.1.0",
    "six==1.17.0",
    "tzdata==2025.2"
]

[project.urls]
"Homepage" = "https://your-homepage-url.com"
"Source" = "https://github.com/tinghsiangTsai/cycu_oop_11372012"